# udp_receiver

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: pick_and_place_receive.launch  pick_and_place_receive_without_wait.launch
offline_files/joints/: .~lock.test.csv#  parabola_201.csv  parabola_8.csv  video_1_30860_34576.csv  video_1_31559_32960.csv  video_1_31559_33060.csv  video_1_31659_32960.csv  video_1_joint_command.csv  video_1_joint_command_v2.csv
offline_files/joints/20180327_basic_trajectories/: 20180327_basic_trajectories.mat  20180327_basic_trajectories_bereinigt.mat  mcs_joints_rel_x_rot.csv  mcs_joints_rel_x_trans.csv  mcs_joints_rel_y_rot.csv  mcs_joints_rel_y_trans.csv  mcs_joints_rel_z_rot.csv  mcs_joints_rel_z_trans.csv  mcs_joints_x_rot.csv  mcs_joints_x_trans.csv  mcs_joints_y_rot.csv  mcs_joints_y_trans.csv  mcs_joints_z_rot.csv  mcs_joints_z_trans.csv
offline_files/joints_and_poses/: mcs_joints_and_poses_x_rot.csv  mcs_joints_and_poses_x_trans.csv  mcs_joints_and_poses_y_rot.csv  mcs_joints_and_poses_y_trans.csv  mcs_joints_and_poses_z_rot.csv  mcs_joints_and_poses_z_trans.csv  parabola_8.csv
offline_files/poses/: ee-pose_free_movement.csv  ee-pose_x-axis.csv  parabola_101.csv  parabola_201.csv  parabola_8.csv  test.csv  xy_10cm_basePoseSquare.csv  xy_10cm_square.csv
scripts/: double_receive.py  gripperCommand_receive.py  jointAngles_and_pose_read.py  jointAngles_read.py  jointAngles_receive.py  jointAngles_receive_array.py  pick_and_place_receive.py  pick_and_place_receive_without_wait.py  pose_read.py  pose_receive.py
(+6 files in other folders)
